--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="GRV-Sf-ggs">
-    <device id="retina6_5" orientation="portrait" appearance="dark"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -11,18 +11,71 @@
         <scene sceneID="kTf-AQ-pzq">
             <objects>
                 <tableViewController id="yR8-jM-9Rm" customClass="MainViewController" customModule="MyPlaces" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="mPi-J9-wmh">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="85" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="mPi-J9-wmh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="rMu-GR-njA">
-                                <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="43.666667938232422"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="rMu-GR-njA" customClass="CustomTableViewCell" customModule="MyPlaces" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.666666030883789" width="414" height="85"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rMu-GR-njA" id="kOt-QQ-kHx">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="85"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nRx-zG-TVm">
+                                            <rect key="frame" x="15" y="10" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="65" id="O1Q-b8-AiT"/>
+                                                <constraint firstAttribute="height" constant="65" id="WOf-uq-9nZ"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NcD-69-Ek1">
+                                            <rect key="frame" x="95" y="10" width="299" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="168-KJ-xHU"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOU-yy-mQh">
+                                            <rect key="frame" x="95" y="35" width="299" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="041-os-9Bv">
+                                            <rect key="frame" x="95" y="54" width="299" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="1rU-nN-Bk3"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="qOU-yy-mQh" firstAttribute="top" secondItem="NcD-69-Ek1" secondAttribute="bottom" constant="4" id="J3d-IR-4Iz"/>
+                                        <constraint firstItem="041-os-9Bv" firstAttribute="leading" secondItem="nRx-zG-TVm" secondAttribute="trailing" constant="15" id="R8G-7M-242"/>
+                                        <constraint firstItem="qOU-yy-mQh" firstAttribute="trailing" secondItem="kOt-QQ-kHx" secondAttribute="trailingMargin" id="S8u-TP-tXR"/>
+                                        <constraint firstItem="NcD-69-Ek1" firstAttribute="leading" secondItem="nRx-zG-TVm" secondAttribute="trailing" constant="15" id="Seb-iR-Kdf"/>
+                                        <constraint firstItem="qOU-yy-mQh" firstAttribute="leading" secondItem="nRx-zG-TVm" secondAttribute="trailing" constant="15" id="eYH-Kt-pqy"/>
+                                        <constraint firstAttribute="trailing" secondItem="041-os-9Bv" secondAttribute="trailing" constant="20" symbolic="YES" id="eh0-q0-XjG"/>
+                                        <constraint firstAttribute="bottom" secondItem="041-os-9Bv" secondAttribute="bottom" constant="10" id="oWX-D9-VcX"/>
+                                        <constraint firstItem="NcD-69-Ek1" firstAttribute="top" secondItem="kOt-QQ-kHx" secondAttribute="top" constant="10" id="pf9-Xb-C0q"/>
+                                        <constraint firstItem="nRx-zG-TVm" firstAttribute="centerY" secondItem="kOt-QQ-kHx" secondAttribute="centerY" id="rb0-g6-nom"/>
+                                        <constraint firstAttribute="trailing" secondItem="NcD-69-Ek1" secondAttribute="trailing" constant="20" symbolic="YES" id="uxN-x5-Oz1"/>
+                                        <constraint firstItem="041-os-9Bv" firstAttribute="top" secondItem="qOU-yy-mQh" secondAttribute="bottom" constant="1" id="wa7-gu-pnn"/>
+                                        <constraint firstItem="nRx-zG-TVm" firstAttribute="leading" secondItem="kOt-QQ-kHx" secondAttribute="leading" constant="15" id="x8b-is-YNu"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="imageOfPlace" destination="nRx-zG-TVm" id="f4K-71-LDv"/>
+                                    <outlet property="locationLabel" destination="qOU-yy-mQh" id="9Wy-Sa-Ele"/>
+                                    <outlet property="nameLabel" destination="NcD-69-Ek1" id="mUQ-4Q-hbW"/>
+                                    <outlet property="typeLabel" destination="041-os-9Bv" id="wMK-y1-ITG"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -34,7 +87,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rp0-AZ-bpx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="398" y="50"/>
+            <point key="canvasLocation" x="397.10144927536237" y="49.553571428571423"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="4kB-iq-o1e">
